Java 17 and JUnit5
* Migrated to Junit5 (#20)
* Java 17 (#22)