@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>org.fuin</groupId>
 		<artifactId>pom</artifactId>
-		<version>1.8.0-SNAPSHOT</version>
+		<version>1.9.0</version>
 	</parent>
 
 	<groupId>org.fuin.esc</groupId>
 	<artifactId>esc-parent</artifactId>
-	<version>0.5.1-SNAPSHOT</version>
+	<version>0.6.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>esc-parent</name>
 	<description>Defines a common event store Java interface and provides some adapters (like for Greg Young's event store) and implementations (like in-memory or file-based).</description>
@@ -29,6 +29,7 @@
 
 	<properties>
 		<eventstore.version>21.10.1-bionic</eventstore.version>
+		<failsafe.argLine>--add-opens java.base/java.util=ALL-UNNAMED</failsafe.argLine>
 	</properties>
 
 	<dependencyManagement>
@@ -80,19 +81,19 @@
 			<dependency>
 				<groupId>org.fuin</groupId>
 				<artifactId>utils4j</artifactId>
-				<version>0.12.1-SNAPSHOT</version>
+				<version>0.13.0</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.fuin</groupId>
 				<artifactId>objects4j</artifactId>
-				<version>0.8.1-SNAPSHOT</version>
+				<version>0.9.0</version>
 			</dependency>
 
 			<dependency>
 				<groupId>io.smallrye</groupId>
 				<artifactId>jandex</artifactId>
-				<version>3.1.2</version>
+				<version>3.1.6</version>
 			</dependency>
 
 			<dependency>
@@ -104,19 +105,19 @@
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
-				<version>3.12.0</version>
+				<version>3.14.0</version>
 			</dependency>
 
 			<dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
-				<version>2.13.0</version>
+				<version>2.15.1</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
-				<version>2.0.7</version>
+				<version>2.0.9</version>
 			</dependency>
 
 			<dependency>
@@ -128,7 +129,7 @@
 			<dependency>
 				<groupId>jakarta.json</groupId>
 				<artifactId>jakarta.json-api</artifactId>
-				<version>2.1.2</version>
+				<version>2.1.3</version>
 			</dependency>
 
 			<dependency>
@@ -144,9 +145,9 @@
 			</dependency>
 
 			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.13.2</version>
+				<groupId>org.junit.jupiter</groupId>
+				<artifactId>junit-jupiter</artifactId>
+				<version>5.10.1</version>
 			</dependency>
 
 			<dependency>
@@ -158,7 +159,7 @@
 			<dependency>
 				<groupId>org.fuin</groupId>
 				<artifactId>units4j</artifactId>
-				<version>0.10.1-SNAPSHOT</version>
+				<version>0.11.0</version>
 			</dependency>
 
 			<dependency>
@@ -176,7 +177,7 @@
 			<dependency>
 				<groupId>nl.jqno.equalsverifier</groupId>
 				<artifactId>equalsverifier</artifactId>
-				<version>3.15</version>
+				<version>3.15.5</version>
 			</dependency>
 
 			<dependency>
@@ -193,14 +194,21 @@
 
 			<dependency>
 				<groupId>org.mockito</groupId>
-				<artifactId>mockito-all</artifactId>
-				<version>2.0.2-beta</version>
+				<artifactId>mockito-core</artifactId>
+				<version>5.8.0</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-junit-jupiter</artifactId>
+				<version>5.8.0</version>
+				<scope>test</scope>
 			</dependency>
 
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
-				<version>1.4.8</version>
+				<version>1.4.14</version>
 			</dependency>
 
 			<dependency>
@@ -296,13 +304,13 @@
 			<dependency>
 				<groupId>jakarta.xml.bind</groupId>
 				<artifactId>jakarta.xml.bind-api</artifactId>
-				<version>4.0.0</version>
+				<version>4.0.1</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.glassfish.jaxb</groupId>
 				<artifactId>jaxb-runtime</artifactId>
-				<version>4.0.3</version>
+				<version>4.0.4</version>
 			</dependency>
 
 			<dependency>
@@ -314,7 +322,7 @@
 			<dependency>
 				<groupId>org.glassfish</groupId>
 				<artifactId>jakarta.el</artifactId>
-				<version>5.0.0-M1</version>
+				<version>4.0.1</version>
 			</dependency>
 
 		</dependencies>
@@ -343,12 +351,43 @@
 					<artifactId>docker-maven-plugin</artifactId>
 					<version>0.38.1</version>
 				</plugin>
-				
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-failsafe-plugin</artifactId>
+					<version>3.2.3</version>
+					<configuration>
+						<argLine>${failsafe.argLine}</argLine>
+					</configuration>
+					<executions>
+						<execution>
+							<id>integration-test</id>
+							<goals>
+								<goal>integration-test</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>verify</id>
+							<goals>
+								<goal>verify</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+
 	    	</plugins>
 	    	
     	</pluginManagement>
 
 		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+				</configuration>
+			</plugin>
 
 			<plugin>
 				<groupId>org.jacoco</groupId>
